--- a/package.json
+++ b/package.json
@@ -1,26 +1,27 @@
 {
-  "name": "nextjs-starter-template",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "next": "12.0.4",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
-  },
-  "devDependencies": {
-    "@types/node": "16.11.7",
-    "@types/react": "17.0.35",
-    "autoprefixer": "^10.4.0",
-    "eslint": "7",
-    "eslint-config-next": "12.0.4",
-    "postcss": "^8.3.11",
-    "prettier": "2.4.1",
-    "tailwindcss": "^2.2.19",
-    "typescript": "4.4.4"
-  }
+    "name": "nextjs-starter-template",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "next": "12.0.4",
+        "react": "17.0.2",
+        "react-dom": "17.0.2"
+    },
+    "devDependencies": {
+        "@trivago/prettier-plugin-sort-imports": "^3.1.1",
+        "@types/node": "16.11.7",
+        "@types/react": "17.0.35",
+        "autoprefixer": "^10.4.0",
+        "eslint": "7",
+        "eslint-config-next": "12.0.4",
+        "postcss": "^8.3.11",
+        "prettier": "2.4.1",
+        "tailwindcss": "^2.2.19",
+        "typescript": "4.4.4"
+    }
 }
