--- a/package.json
+++ b/package.json
@@ -8,20 +8,26 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "classnames": "^2.3.1",
         "next": "12.0.4",
         "react": "17.0.2",
         "react-dom": "17.0.2"
     },
     "devDependencies": {
+        "@tailwindcss/aspect-ratio": "^0.4.0",
+        "@tailwindcss/forms": "^0.4.0",
+        "@tailwindcss/line-clamp": "^0.3.0",
+        "@tailwindcss/typography": "^0.5.0",
         "@trivago/prettier-plugin-sort-imports": "^3.1.1",
         "@types/node": "16.11.7",
         "@types/react": "17.0.35",
         "autoprefixer": "^10.4.0",
         "eslint": "7",
         "eslint-config-next": "12.0.4",
-        "postcss": "^8.3.11",
+        "postcss": "^8.4.5",
+        "postcss-100vh-fix": "^1.0.2",
         "prettier": "2.4.1",
-        "tailwindcss": "^2.2.19",
+        "tailwindcss": "^3.0.7",
         "typescript": "4.4.4"
     }
 }
