--- a/package.json
+++ b/package.json
@@ -8,10 +8,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@trpc/client": "^9.16.0",
+    "@trpc/next": "^9.16.0",
+    "@trpc/react": "^9.16.0",
+    "@trpc/server": "^9.16.0",
     "classnames": "^2.3.1",
     "next": "12.0.4",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-query": "^3.34.8",
+    "zod": "^3.11.6"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.0",
