--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@trpc/server": "^9.16.0",
     "classnames": "^2.3.1",
     "next": "12.0.4",
+    "prisma": "^3.8.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-query": "^3.34.8",
+    "ts-node": "^10.4.0",
     "zod": "^3.11.6"
   },
   "devDependencies": {
@@ -25,7 +27,7 @@
     "@tailwindcss/line-clamp": "^0.3.0",
     "@tailwindcss/typography": "^0.5.0",
     "@trivago/prettier-plugin-sort-imports": "^3.1.1",
-    "@types/node": "16.11.7",
+    "@types/node": "^17.0.8",
     "@types/react": "17.0.35",
     "autoprefixer": "^10.4.0",
     "eslint": "7",
@@ -34,6 +36,6 @@
     "postcss-100vh-fix": "^1.0.2",
     "prettier": "2.4.1",
     "tailwindcss": "^3.0.7",
-    "typescript": "4.4.4"
+    "typescript": "^4.5.4"
   }
 }
