--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.1",
+    "@prisma/client": "^3.8.0",
     "@trpc/client": "^9.16.0",
     "@trpc/next": "^9.16.0",
     "@trpc/react": "^9.16.0",
     "@trpc/server": "^9.16.0",
     "classnames": "^2.3.1",
     "next": "12.0.4",
+    "next-auth": "^4.1.0",
+    "nodemailer": "^6.7.2",
     "prisma": "^3.8.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
